--- a/PyTorch.ipynb
+++ b/PyTorch.ipynb
@@ -1938,10 +1938,22 @@
         "print(\"Saved PyTorch Model State to model.pth\")"
       ],
       "metadata": {
-        "id": "_7HsJBjbbuZb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_7HsJBjbbuZb",
+        "outputId": "be8f0eb1-c9c1-408c-9a9b-917e467028ee"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved PyTorch Model State to model.pth\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1959,10 +1971,25 @@
         "model.load_state_dict(torch.load(\"model.pth\"))"
       ],
       "metadata": {
-        "id": "8BlICmhOb289"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8BlICmhOb289",
+        "outputId": "006f0326-fd74-4129-ecc7-64fa519333dc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1997,10 +2024,22 @@
         "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
       ],
       "metadata": {
-        "id": "SHYTP2tacGGn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SHYTP2tacGGn",
+        "outputId": "99b1157c-41af-4ee6-ad7e-14c46b37e744"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n"
+          ]
+        }
+      ]
     }
   ]
 }
