--- a/02_Tensor.ipynb
+++ b/02_Tensor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_Tensor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyvYH4L0bd4bbA1Xq1WeYi",
+      "authorship_tag": "ABX9TyOt+V6ApZugKb3wD+P/gfr9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -363,6 +363,209 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sum items of tensor"
+      ],
+      "metadata": {
+        "id": "Xr3Y9tdAgpbm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agg = tensor.sum()\n",
+        "agg_item = agg.item()\n",
+        "print(agg_item, type(agg_item))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wlGFXErfgpvy",
+        "outputId": "dbb6b363-a30a-43e4-9b51-2614c67597f6"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12.0 <class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Add value 5 in each position of tensor"
+      ],
+      "metadata": {
+        "id": "QNjq5Gveg1wE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{tensor} \\n\")\n",
+        "tensor.add_(5)\n",
+        "print(tensor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hMRhArVVg2II",
+        "outputId": "d7a420ee-7725-4773-b10e-62dbc4c02a19"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.]]) \n",
+            "\n",
+            "tensor([[6., 5., 6., 6.],\n",
+            "        [6., 5., 6., 6.],\n",
+            "        [6., 5., 6., 6.],\n",
+            "        [6., 5., 6., 6.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a vector with five position when the itens have a number one, the last is a convert tensor to numpy format"
+      ],
+      "metadata": {
+        "id": "OATI6oRRg_pZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t = torch.ones(5)\n",
+        "print(f\"t: {t}\")\n",
+        "n = t.numpy()\n",
+        "print(f\"n: {n}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TjZV2JAyg__q",
+        "outputId": "d014b469-3101-4867-dd6a-66c6246e1534"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t: tensor([1., 1., 1., 1., 1.])\n",
+            "n: [1. 1. 1. 1. 1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Add value one in all postion of tensor"
+      ],
+      "metadata": {
+        "id": "9Rc2QtLghht8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t.add_(1)\n",
+        "print(f\"t: {t}\")\n",
+        "print(f\"n: {n}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8PCleKcdhiA8",
+        "outputId": "9c8caa21-a0a3-4f60-8b65-4bb185c64d23"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t: tensor([2., 2., 2., 2., 2.])\n",
+            "n: [2. 2. 2. 2. 2.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a vector with numpy and convert to tensor"
+      ],
+      "metadata": {
+        "id": "ztt6AO16h9se"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = np.ones(5)\n",
+        "t = torch.from_numpy(n)"
+      ],
+      "metadata": {
+        "id": "zdre1Jvfh9QD"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "CUKcvc6LiLbq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.add(n, 1, out=n)\n",
+        "print(f\"t: {t}\")\n",
+        "print(f\"n: {n}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "roTtawFdiLuD",
+        "outputId": "38027095-8dca-4cc5-8150-a2c12d5d3da3"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t: tensor([3., 3., 3., 3., 3.], dtype=torch.float64)\n",
+            "n: [3. 3. 3. 3. 3.]\n"
+          ]
         }
       ]
     }
