--- a/02_Tensor.ipynb
+++ b/02_Tensor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02_Tensor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOt+V6ApZugKb3wD+P/gfr9",
+      "authorship_tag": "ABX9TyPMtW4ZcSOdk6T+jZKy7vPZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,7 +537,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Adiciona soma o valor 1 em todas as posições do tensor e vetor "
       ],
       "metadata": {
         "id": "CUKcvc6LiLbq"
